<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagoFragment"
    android:background="@drawable/fondo_pago">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_pago"
        android:scaleType="centerCrop"
        android:alpha="0.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">
        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pago"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textTipoPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_pago"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <Spinner
                android:id="@+id/comboPago"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:textColor="@android:color/black"
                android:popupBackground="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/botonPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pagar"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/primaryColor"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textValoracion"
            android:visibility="invisible"
            android:layout_marginBottom="8dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:visibility="invisible"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/botonValorar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorar"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/primaryColor"
            android:visibility="invisible"
            android:layout_gravity="center" />
    </LinearLayout>
</FrameLayout>