<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/tab_bar_background"
    android:elevation="8dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@+id/Tab1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:onClick="clic"
        android:background="@drawable/tab_item_selector">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/directions_car_24px"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matricula"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Tab2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:onClick="clic"
        android:background="@drawable/tab_item_selector">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/local_gas_station_24px"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_a_repostar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Tab3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:onClick="clic"
        android:background="@drawable/tab_item_selector">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/paid_24px"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pago"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</LinearLayout>
